fixing some z-index issues. fade-in screen was not working, graffiti debug overlay,

--- a/public/graffiti.css
+++ b/public/graffiti.css
@@ -13,6 +13,9 @@
     z-index: var(--z-index-graffiti);
 }
 
+#graffitiScreen {
+    z-index: var(--z-index-graffiti-debug-overlay);
+}
 
 #graffitiScreen svg {
     position: absolute;
